# XilsPy

./: .gitignore  CMakeLists.txt  setup.py
src/: bindings.cpp  standalone_main.cpp
xislLib/include/: Acq.h
